# mig-cpu

./: CMakeLists.txt  README.md  TODO.md
rtl/design/core/mig-u/: InsnDecode.sv  MigUAlu.sv  MigUCore.sv  NextIP.sv  migu_core.flist  migu_riscv_opcodes.sv
rtl/lib/blocks/: blocks.flist
rtl/lib/blocks/basic/: blocks_basic.flist
rtl/lib/blocks/basic/AdderComparator/: AdderComparator.sv
rtl/lib/blocks/basic/Decoder/: Decoder.flist  Decoder.sv
rtl/lib/blocks/basic/Encoder/: Encoder.flist  Encoder.sv
rtl/lib/blocks/basic/FullAdder/: FullAdder.flist  FullAdder.sv
rtl/lib/blocks/basic/FullAdderAOI/: FullAdderAOI.flist
rtl/lib/blocks/basic/GatedClk/: GatedClk.flist  GatedClk.sv
rtl/lib/blocks/basic/Incr/: Incr.flist  Incr16.sv  Incr9.sv
rtl/lib/blocks/basic/LiMemDff/: LiMemDff.flist  LiMemDff.sv
rtl/lib/blocks/basic/RippleCarryAdder/: RippleCarryAdder.flist  RippleCarryAdder.sv
rtl/lib/blocks/basic/adder/AdderComparator/: AdderComparator.flist
rtl/lib/blocks/basic/adder/CarrySaveAdder/: CarrySaveAdder.flist  CarrySaveAdder.sv
rtl/lib/blocks/basic/adder/FullAdderAOI/: FullAdderAOI.sv
rtl/lib/blocks/basic/adder/RippleCarryAdder/: RippleCarryAdder.sv
rtl/lib/blocks/bus/apb/: ApbBus.sv  ApbMaster.sv  ApbResponder.sv
rtl/lib/blocks/mem/: blocks_mem.flist
rtl/lib/blocks/mem/SimRAM/: SimRAM.flist  SimRAM.sv
rtl/lib/functions/: BitFunctions.sv  functions.flist
rtl/lib/gates/builtin/: And2.sv  Inv.sv  Maj3.sv  Mux2.sv  Nand2.sv  Nor2.sv  and2.sv  gates.flist
rtl/lib/gates/cmos/: And2.sv  INV.sv  Inv.sv  MAJ3.sv  MAJ3_.sv  MUX2.sv  Maj3.sv  Mux2.sv  NAND2.sv  NAND3.sv  NOR2.sv  NOR2_.sv  Nand2.sv  Nor2.sv  gates.flist
rtl/lib/gates/generic/: AOI22.sv  And2.sv  Inv.sv  Maj3.sv  Mux2.sv  Mux4.sv  Nand2.sv  Nor2.sv  and2.sv  gates.flist
rtl/lib/gates/tsmc/: AND2.sv  And2.sv  INV.sv  Inv.sv  MAJ3_.sv  MUX2.sv  Maj3.sv  Mux2.sv  NAND2.sv  NOR2_.sv  Nand2.sv  Nor2.sv  and2.sv  gates.flist
rtl/lib/macros/: clog2.svh
rtl/lib/riscv/: RiscvInsnTypeDecode.sv  riscv.flist  riscv.sv  riscv_insn_types.sv
test/: CMakeLists.txt
test/verilator/: CMakeLists.txt
test/verilator/blocks/: CMakeLists.txt
test/verilator/blocks/basic/: CMakeLists.txt
test/verilator/blocks/basic/AdderComparator/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/blocks/basic/Decoder/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/blocks/basic/Encoder/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/blocks/basic/GatedClk/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/blocks/basic/Incr/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/blocks/basic/RippleCarryAdder/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/blocks/mem/: CMakeLists.txt
test/verilator/blocks/mem/SimRAM/: CMakeLists.txt  TbTop.sv  sim_main.cpp  test.hex
test/verilator/design/core/: CMakeLists.txt
test/verilator/design/core/mig-u/: CMakeLists.txt
test/verilator/design/core/mig-u/alu/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/design/core/mig-u/full/: CMakeLists.txt  README.md  TbTop.sv  sim_main.cpp
test/verilator/design/core/mig-u/full/asm_tests/: CMakeLists.txt  bare.ld  test0001.S
test/verilator/functions/bit/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/gates/: CMakeLists.txt  TbTop.sv  sim_main.cpp
test/verilator/helper/: simple_test.cmake  verilator_tick.h
test/verilator/riscv/: CMakeLists.txt
test/verilator/riscv/decode/: CMakeLists.txt  TbTop.sv  sim_main.cpp
tools/: CMakeLists.txt
tools/riscv-opcodes/: CMakeLists.txt
